# stock-stream-2

./: .gitignore  .pre-commit-config.yaml  API_SPECIFICATION.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  IMPLEMENTATION_CHECKLIST.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  QUICK_START.md  README.md  TECHNICAL_NOTES.md  hello.py  pyproject.toml
config/: backtest_params.yaml  indicator_params.yaml  strategies.example.yaml  strategies.yaml  symbols.example.json  symbols.json
docs/: API_SPECIFICATION.md  ARCHITECTURE_UPDATE_SUMMARY.md  ASX_SYMBOL_UPDATER_IMPLEMENTATION.md  COMMAND_REFERENCE.md  DATA_VALIDATION.md  DESIGN_DECISIONS.md  IMPLEMENTATION_CHECKLIST.md  LOCAL_TESTING_SETUP.md  LOGGING_GUIDE.md  MISSING_COMPONENTS.md  MOCK_SYSTEM.md  PHASE2_MODULE1_COMPLETE.md  QUICK_START.md  README.md  STEP_FUNCTIONS_ARCHITECTURE.md  TECHNICAL_NOTES.md
modules/asx_symbol_updater/: README.md  handler.py
modules/common/: __init__.py  exceptions.py  logger.py  validators.py
modules/stock_data_fetcher/: config.py  fetcher.py  handler.py  requirements.txt  storage.py
scripts/: build_lambda.py  run_asx_updater_local.py  run_asx_updater_real_scrape.py
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/integration/: test_lambda_handler.py
tests/unit/: test_fetcher.py  test_storage.py  test_validators.py
